--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
   <br/>
   
   <div>
-    <p><a href="index.html" target="_blank">back to main</a></p>
+    <p class="center"><a href="index.html" target="_blank">back to main</a></p>
   </div>
 </body>
     
